Fix datapoints alignment in edit mode

--- a/client/app/styles/components/_card.styl
+++ b/client/app/styles/components/_card.styl
@@ -148,6 +148,7 @@
             cursor pointer
 
         .group
+            align-items       stretch
             position          relative
             vertically-spaced 6px
 
@@ -178,7 +179,6 @@
                 margin 0
 
         .type
-            vertically-padded 6px
             right-spaced 2px
 
             &:focus
